mobile menu fix for z-index issue

--- a/_navbar.scss
+++ b/_navbar.scss
@@ -6,7 +6,7 @@ header {
     background-color: $clr-black;
     backdrop-filter: blur(2rem);
     opacity: 0.95;
-    z-index: 999;
+    z-index: 1000;
     transition: height 500ms ease;
     nav {
         display: flex;
